--- a/package.json
+++ b/package.json
@@ -3,24 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-spec": "openapi-typescript ../PayProsBackend/src/main/resources/spec.json -o ./lib/types.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "@ant-design/pro-components": "^2.7.15",
+    "antd": "^5.20.2",
+    "clsx": "^2.1.1",
+    "next": "14.2.5",
+    "openapi-fetch": "^0.11.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.3.0",
+    "swagger-typescript-api": "^13.0.21",
+    "tailwind-merge": "^2.5.2",
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "openapi-typescript": "^7.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5.5.4"
   }
 }
