--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@ant-design/pro-chat": "^1.15.2",
     "@ant-design/pro-components": "^2.7.15",
     "antd": "^5.20.2",
+    "antd-style": "^3.6.2",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "openapi-fetch": "^0.11.1",
