chore: Update workflow status map and nested steps in WorkflowView.tsx

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@ant-design/pro-chat": "^1.15.2",
     "@ant-design/pro-components": "^2.7.15",
     "antd": "^5.20.2",
+    "avvvatars-react": "^0.4.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "next": "14.2.5",
     "openapi-fetch": "^0.11.1",
     "react": "^18",
