--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://automatedcustomercommunicationspringboot-fdbzcwdjambxhud9.eastus-01.azurewebsites.net/v1
+NEXT_PUBLIC_API_URL=http://localhost:8080/v1
